fix output line wrapping

--- a/frontend/styles/editor.sass
+++ b/frontend/styles/editor.sass
@@ -118,3 +118,6 @@ $editorContentHeight:  calc(100vh - 48px - 20px)
   margin: 0 20px
   border: 1px solid $borderColor
   border-radius: 2px
+
+.output-code-line
+  display: flex
